--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -2,7 +2,7 @@ name: Ejecutar Scraper cada 6 horas
 
 on:
   schedule:
-    - cron: '0 */6 * * *'
+    - cron: '0 */6 * * *'  # Cada 6 horas
   workflow_dispatch:
 
 jobs:
@@ -18,18 +18,34 @@ jobs:
         with:
           python-version: '3.12'
 
+      - name: Cachear dependencias de Poetry y pip
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/pypoetry
+            ~/.cache/pip
+          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-poetry-
+
+      - name: Cachear navegadores de Playwright
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/ms-playwright
+          key: playwright-browsers-v1
+
       - name: Instalar Poetry
         run: |
           curl -sSL https://install.python-poetry.org | python3 -
           echo "$HOME/.local/bin" >> $GITHUB_PATH
 
-      - name: Instalar dependencias
+      - name: Instalar dependencias con Poetry
         working-directory: kavak_scraper
         run: poetry install --no-interaction
 
-      - name: Instalar navegadores de Playwright
+      - name: Instalar solo Chromium para Playwright
         working-directory: kavak_scraper
-        run: poetry run playwright install --with-deps
+        run: poetry run playwright install chromium
 
       - name: Ejecutar scraper
         working-directory: kavak_scraper
