--- a/kavak_scraper/pyproject.toml
+++ b/kavak_scraper/pyproject.toml
@@ -11,7 +11,9 @@ dependencies = [
     "requests (>=2.32.3,<3.0.0)",
     "beautifulsoup4 (>=4.13.4,<5.0.0)",
     "pydantic (>=2.11.4,<3.0.0)",
-    "playwright (>=1.52.0,<2.0.0)"
+    "playwright (>=1.52.0,<2.0.0)",
+    "undetected-chromedriver (>=3.5.5,<4.0.0)",
+    "selenium (>=4.32.0,<5.0.0)"
 ]
 
 [project.scripts]
