--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -2,7 +2,7 @@ name: Ejecutar Scraper cada 6 horas
 
 on:
   schedule:
-    - cron: '0 */6 * * *'
+    - cron: '0 */6 * * *'  # Cada 6 horas
   workflow_dispatch:
 
 jobs:
@@ -16,26 +16,20 @@ jobs:
       - name: Configurar Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
-
-      - name: Instalar Google Chrome
-        run: |
-          sudo apt update
-          sudo apt install -y wget gnupg unzip curl
-          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-          sudo apt install -y ./google-chrome-stable_current_amd64.deb
-
-      - name: Instalar dependencias del sistema necesarias para Poetry y distutils
-        run: sudo apt-get install -y python3.12-venv
+          python-version: '3.12'
 
       - name: Instalar Poetry
         run: |
           curl -sSL https://install.python-poetry.org | python3 -
           echo "$HOME/.local/bin" >> $GITHUB_PATH
 
-      - name: Instalar dependencias del proyecto
+      - name: Instalar dependencias con Poetry
         working-directory: kavak_scraper
         run: poetry install --no-interaction
+
+      - name: Instalar solo Chromium para Playwright
+        working-directory: kavak_scraper
+        run: poetry run playwright install chromium
 
       - name: Ejecutar scraper
         working-directory: kavak_scraper
