--- a/kavak_scraper/pyproject.toml
+++ b/kavak_scraper/pyproject.toml
@@ -1,23 +1,27 @@
-[tool.poetry]
+[project]
 name = "kavak-scraper"
 version = "0.1.0"
-description = "Scraper para autos de Kavak"
-authors = ["Your Name <you@example.com>"]
+description = ""
+authors = [
+    {name = "Your Name",email = "you@example.com"}
+]
 readme = "README.md"
-packages = [{ include = "kavak_scraper", from = "src" }]
+requires-python = ">=3.11"
+dependencies = [
+    "requests (>=2.32.3,<3.0.0)",
+    "beautifulsoup4 (>=4.13.4,<5.0.0)",
+    "pydantic (>=2.11.4,<3.0.0)",
+    "playwright (>=1.52.0,<2.0.0)",
+    "undetected-chromedriver (>=3.5.5,<4.0.0)",
+    "selenium (>=4.32.0,<5.0.0)"
+]
 
-[tool.poetry.dependencies]
-python = "^3.11"
-requests = ">=2.32.3,<3.0.0"
-beautifulsoup4 = ">=4.13.4,<5.0.0"
-pydantic = ">=2.11.4,<3.0.0"
-playwright = ">=1.52.0,<2.0.0"
-undetected-chromedriver = ">=3.5.5,<4.0.0"
-selenium = ">=4.32.0,<5.0.0"
-
-[tool.poetry.scripts]
+[project.scripts]
 scrap = "kavak_scraper.main:main"
 
+[tool.poetry]
+packages = [{include = "kavak_scraper", from = "src"}]
+
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
